# my-test

./: .coverage  .gitignore  123.md  123.xml  language_detection.py  noise.py  pyproject.toml  pytest-coverage.xml  pytest.ini  pytest.xml  requirements_lint.txt  requirements_test.txt
.gitea/workflows/: linting.yml  pytest.yml
.github/workflows/: bot.yml  linting.yml  pylinter.yml  pytest.yml  pytest_pr.yml  ruff.yml
tests/: test_api.py
